// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className="jsx-2720692559  "
/>
`;

exports[`component - layout should render with props 1`] = `
<main
  className="jsx-2720692559  "
>
  <b>
    #content
  </b>
</main>
`;
